# SoundShader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gain.glsl  generator_script.txt
resource/: Info.plist  editor.uidesc
source/: cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h
